# zen

./: .gitignore  ANDROID_GUIDE.md  Cargo.toml  DESIGN.md  IMPLEMENTATION_SUMMARY.md  README.md  WEB_SEARCH_SETUP.md
.codemie/: claude.extension.json
assets/: board.tape  bulk-insert.tape  demo_board.json  demo_bulk.json  demo_tree.json  edit-undo.tape  planning.tape  tree.tape
demos/: create-card.tape  find-cards.tape  review-session.tape  setup-demo-data.sh
src/: api_client.rs  app.rs  archive.rs  auth.rs  bert_score.rs  card.rs  card_creation_tui.rs  commands.rs  config.rs  database.rs  editor.rs  finder.rs  input.rs  lib.rs  llm_evaluator.rs  main.rs  review.rs  review_tui.rs  snapshots.rs  stats_tui.rs  storage.rs  topic.rs  topic_review.rs  topic_review_tui.rs  tui.rs  types.rs
src/app/: editing.rs  folds.rs  layers.rs  meta.rs  mod.rs  search.rs  status.rs  tree.rs  visual.rs
src/ui/: board.rs  done.rs  filter.rs  help.rs  mod.rs  move_popup.rs  snaps.rs  stats.rs  tui.rs
tests/: review_integration_test.rs
