[package]
name = "zen"
version = "1.1.1"
edition = "2021"
authors = ["Hamza Mohd Zubair <hamzamohdzubair@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Thin CLI client for forgetmeifyoucan - AI-powered spaced repetition learning"
repository = "https://github.com/hamzamohdzubair/zen"
keywords = ["spaced-repetition", "learning", "ai", "cli", "tui"]
categories = ["command-line-utilities", "education"]

[[bin]]
name = "zen"
path = "src/main.rs"

[dependencies]
# CLI & TUI
clap = { version = "4.5", features = ["derive", "cargo"] }
ratatui = "0.29"
crossterm = "0.28"

# API Client
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Auth token storage
keyring = "3.6"
rpassword = "7.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
