[package]
name = "zen"
version = "3.1.0"
edition = "2021"
description = "A modal Kanban TUI for personal task management"
license = "MIT"
repository = "https://github.com/hamzamohdzubair/zen"

[[bin]]
name = "zen"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs-next = "2"
clap = { version = "4", features = ["derive"] }
